[package]
name = "discium"
version = "0.1.0"
edition = "2024"

[dependencies]
ash = "0.38.0"
windows = {
    version = "0.62.2",
    features = [
        "Win32_Foundation",
        "Win32_UI_WindowsAndMessaging",
        "Win32_System_LibraryLoader",
        "Win32_Graphics_Gdi",
        "Win32_System_Threading",
        "Win32_System_ProcessStatus",
        "Win32_UI_Input_KeyboardAndMouse",
    ],
}
glam = "0.29"