[package]
name = "discium"
version = "0.1.0"
edition = "2024"

[dependencies]
ash = { version = "0.38.0", features = ["loaded"] }
glam = "0.29"

[target.'cfg(windows)'.dependencies]
windows = {
    version = "0.62.2",
    features = [
        "Win32_Foundation",
        "Win32_UI_WindowsAndMessaging",
        "Win32_System_LibraryLoader",
        "Win32_Graphics_Gdi",
        "Win32_System_Threading",
        "Win32_System_ProcessStatus",
        "Win32_UI_Input_KeyboardAndMouse",
    ],
}


[target.'cfg(target_os = "linux")'.dependencies]
wayland-backend = { version = "0.3.10", default-features = false, features = ["client_system"] }
wayland-client = "0.31.10"
wayland-protocols = { version = "0.32.8", features = ["staging", "client"] }